cmpl_projet/src/analyseurs/projetParser.java
// $ANTLR 3.5.2 src/analyseurs/projet.g 2026-03-06 17:21:51

	package analyseurs ;   

 	import libIO.*;       
  	import compilateur.*;

	import java.io.IOException;
	import java.io.DataInputStream;
	import java.io.FileInputStream;



import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class projetParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "COMMENT", "ID", "INT", "RC", 
		"WS", "'('", "')'", "'*'", "'+'", "','", "'-'", "':'", "':='", "';'", 
		"'<'", "'<='", "'<>'", "'='", "'>'", "'>='", "'alors'", "'aut'", "'bool'", 
		"'cond'", "'const'", "'debut'", "'def'", "'div'", "'ecrire'", "'ent'", 
		"'et'", "'faire'", "'fait'", "'faux'", "'fcond'", "'fin'", "'fixe'", "'fsi'", 
		"'lire'", "'mod'", "'module'", "'non'", "'ou'", "'proc'", "'programme'", 
		"'ref'", "'si'", "'sinon'", "'ttq'", "'var'", "'vrai'"
	};
	public static final int EOF=-1;
	public static final int T__9=9;
	public static final int T__10=10;
	public static final int T__11=11;
	public static final int T__12=12;
	public static final int T__13=13;
	public static final int T__14=14;
	public static final int T__15=15;
	public static final int T__16=16;
	public static final int T__17=17;
	public static final int T__18=18;
	public static final int T__19=19;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int T__38=38;
	public static final int T__39=39;
	public static final int T__40=40;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int T__49=49;
	public static final int T__50=50;
	public static final int T__51=51;
	public static final int T__52=52;
	public static final int T__53=53;
	public static final int T__54=54;
	public static final int COMMENT=4;
	public static final int ID=5;
	public static final int INT=6;
	public static final int RC=7;
	public static final int WS=8;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public projetParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public projetParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return projetParser.tokenNames; }
	@Override public String getGrammarFileName() { return "src/analyseurs/projet.g"; }


	// variables globales et methodes utiles à placer ici
	  



	// $ANTLR start "unite"
	// src/analyseurs/projet.g:57:1: unite : ( unitprog EOF | unitmodule EOF );
	public final void unite() throws RecognitionException {
		try {
			// src/analyseurs/projet.g:57:6: ( unitprog EOF | unitmodule EOF )
			int alt1=2;
			int LA1_0 = input.LA(1);
			if ( (LA1_0==48) ) {
				alt1=1;
			}
			else if ( (LA1_0==44) ) {
				alt1=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 1, 0, input);
				throw nvae;
			}

			switch (alt1) {
				case 1 :
					// src/analyseurs/projet.g:58:2: unitprog EOF
					{
					pushFollow(FOLLOW_unitprog_in_unite67);
					unitprog();
					state._fsp--;

					PtGen.pt(255);
					match(input,EOF,FOLLOW_EOF_in_unite71); 
					}
					break;
				case 2 :
					// src/analyseurs/projet.g:59:4: unitmodule EOF
					{
					pushFollow(FOLLOW_unitmodule_in_unite76);
					unitmodule();
					state._fsp--;

					match(input,EOF,FOLLOW_EOF_in_unite78); 
					}
					break;

			}
		}

		// la directive rulecatch permet d'interrompre l'analyse à la première erreur de syntaxe
			catch (RecognitionException e) {
				reportError (e) ;
				throw e ; 
			}

		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "unite"



	// $ANTLR start "unitprog"
	// src/analyseurs/projet.g:61:1: unitprog : 'programme' ident ':' declarations corps ;
	public final void unitprog() throws RecognitionException {
		try {
			// src/analyseurs/projet.g:61:9: ( 'programme' ident ':' declarations corps )
			// src/analyseurs/projet.g:62:2: 'programme' ident ':' declarations corps
			{
			match(input,48,FOLLOW_48_in_unitprog86); 
			pushFollow(FOLLOW_ident_in_unitprog88);
			ident();
			state._fsp--;

			match(input,15,FOLLOW_15_in_unitprog90); 
			pushFollow(FOLLOW_declarations_in_unitprog92);
			declarations();
			state._fsp--;

			pushFollow(FOLLOW_corps_in_unitprog94);
			corps();
			state._fsp--;

			 System.out.println("succès, arrêt de la compilation "); 
					
			}

		}

		// la directive rulecatch permet d'interrompre l'analyse à la première erreur de syntaxe
			catch (RecognitionException e) {
				reportError (e) ;
				throw e ; 
			}

		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "unitprog"



	// $ANTLR start "unitmodule"
	// src/analyseurs/projet.g:65:1: unitmodule : 'module' ident ':' declarations ;
	public final void unitmodule() throws RecognitionException {
		try {
			// src/analyseurs/projet.g:65:11: ( 'module' ident ':' declarations )
			// src/analyseurs/projet.g:66:2: 'module' ident ':' declarations
			{
			match(input,44,FOLLOW_44_in_unitmodule104); 
			pushFollow(FOLLOW_ident_in_unitmodule106);
			ident();
			state._fsp--;

			match(input,15,FOLLOW_15_in_unitmodule108); 
			pushFollow(FOLLOW_declarations_in_unitmodule110);
			declarations();
			state._fsp--;

			}

		}

		// la directive rulecatch permet d'interrompre l'analyse à la première erreur de syntaxe
			catch (RecognitionException e) {
				reportError (e) ;
				throw e ; 
			}

		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "unitmodule"



	// $ANTLR start "declarations"
	// src/analyseurs/projet.g:68:1: declarations : ( partiedef )? ( partieref )? ( consts )? ( vars )? ( decprocs )? ;
	public final void declarations() throws RecognitionException {
		try {
			// src/analyseurs/projet.g:68:13: ( ( partiedef )? ( partieref )? ( consts )? ( vars )? ( decprocs )? )
			// src/analyseurs/projet.g:69:2: ( partiedef )? ( partieref )? ( consts )? ( vars )? ( decprocs )?
			{
			// src/analyseurs/projet.g:69:2: ( partiedef )?
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==30) ) {
				alt2=1;
			}
			switch (alt2) {
				case 1 :
					// src/analyseurs/projet.g:69:2: partiedef
					{
					pushFollow(FOLLOW_partiedef_in_declarations118);
					partiedef();
					state._fsp--;

					}
					break;

			}

			// src/analyseurs/projet.g:69:13: ( partieref )?
			int alt3=2;
			int LA3_0 = input.LA(1);
			if ( (LA3_0==49) ) {
				alt3=1;
			}
			switch (alt3) {
				case 1 :
					// src/analyseurs/projet.g:69:13: partieref
					{
					pushFollow(FOLLOW_partieref_in_declarations121);
					partieref();
					state._fsp--;

					}
					break;

			}

			// src/analyseurs/projet.g:69:24: ( consts )?
			int alt4=2;
			int LA4_0 = input.LA(1);
			if ( (LA4_0==28) ) {
				alt4=1;
			}
			switch (alt4) {
				case 1 :
					// src/analyseurs/projet.g:69:24: consts
					{
					pushFollow(FOLLOW_consts_in_declarations124);
					consts();
					state._fsp--;

					}
					break;

			}

			// src/analyseurs/projet.g:69:32: ( vars )?
			int alt5=2;
			int LA5_0 = input.LA(1);
			if ( (LA5_0==53) ) {
				alt5=1;
			}
			switch (alt5) {
				case 1 :
					// src/analyseurs/projet.g:69:32: vars
					{
					pushFollow(FOLLOW_vars_in_declarations127);
					vars();
					state._fsp--;

					}
					break;

			}

			// src/analyseurs/projet.g:69:38: ( decprocs )?
			int alt6=2;
			int LA6_0 = input.LA(1);
			if ( (LA6_0==47) ) {
				alt6=1;
			}
			switch (alt6) {
				case 1 :
					// src/analyseurs/projet.g:69:38: decprocs
					{
					pushFollow(FOLLOW_decprocs_in_declarations130);
					decprocs();
					state._fsp--;

					}
					break;

			}

			PtGen.pt(9);
			}

		}

		// la directive rulecatch permet d'interrompre l'analyse à la première erreur de syntaxe
			catch (RecognitionException e) {
				reportError (e) ;
				throw e ; 
			}

		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "declarations"



	// $ANTLR start "partiedef"
	// src/analyseurs/projet.g:71:1: partiedef : 'def' ident ( ',' ident )* ptvg ;
	public final void partiedef() throws RecognitionException {
		try {
			// src/analyseurs/projet.g:71:10: ( 'def' ident ( ',' ident )* ptvg )
			// src/analyseurs/projet.g:72:2: 'def' ident ( ',' ident )* ptvg
			{
			match(input,30,FOLLOW_30_in_partiedef140); 
			pushFollow(FOLLOW_ident_in_partiedef142);
			ident();
			state._fsp--;

			// src/analyseurs/projet.g:72:14: ( ',' ident )*
			loop7:
			while (true) {
				int alt7=2;
				int LA7_0 = input.LA(1);
				if ( (LA7_0==13) ) {
					alt7=1;
				}

				switch (alt7) {
				case 1 :
					// src/analyseurs/projet.g:72:15: ',' ident
					{
					match(input,13,FOLLOW_13_in_partiedef145); 
					pushFollow(FOLLOW_ident_in_partiedef147);
					ident();
					state._fsp--;

					}
					break;

				default :
					break loop7;
				}
			}

			pushFollow(FOLLOW_ptvg_in_partiedef151);
			ptvg();
			state._fsp--;

			}

		}

		// la directive rulecatch permet d'interrompre l'analyse à la première erreur de syntaxe
			catch (RecognitionException e) {
				reportError (e) ;
				throw e ; 
			}

		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "partiedef"



	// $ANTLR start "partieref"
	// src/analyseurs/projet.g:74:1: partieref : 'ref' specif ( ',' specif )* ptvg ;
	public final void partieref() throws RecognitionException {
		try {
			// src/analyseurs/projet.g:74:10: ( 'ref' specif ( ',' specif )* ptvg )
			// src/analyseurs/projet.g:75:2: 'ref' specif ( ',' specif )* ptvg
			{
			match(input,49,FOLLOW_49_in_partieref159); 
			pushFollow(FOLLOW_specif_in_partieref161);
			specif();
			state._fsp--;

			// src/analyseurs/projet.g:75:15: ( ',' specif )*
			loop8:
			while (true) {
				int alt8=2;
				int LA8_0 = input.LA(1);
				if ( (LA8_0==13) ) {
					alt8=1;
				}

				switch (alt8) {
				case 1 :
					// src/analyseurs/projet.g:75:16: ',' specif
					{
					match(input,13,FOLLOW_13_in_partieref164); 
					pushFollow(FOLLOW_specif_in_partieref166);
					specif();
					state._fsp--;

					}
					break;

				default :
					break loop8;
				}
			}

			pushFollow(FOLLOW_ptvg_in_partieref170);
			ptvg();
			state._fsp--;

			}

		}

		// la directive rulecatch permet d'interrompre l'analyse à la première erreur de syntaxe
			catch (RecognitionException e) {
				reportError (e) ;
				throw e ; 
			}

		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "partieref"



	// $ANTLR start "specif"
	// src/analyseurs/projet.g:77:1: specif : ident ( 'fixe' '(' type ( ',' type )* ')' )? ( 'mod' '(' type ( ',' type )* ')' )? ;
	public final void specif() throws RecognitionException {
		try {
			// src/analyseurs/projet.g:77:7: ( ident ( 'fixe' '(' type ( ',' type )* ')' )? ( 'mod' '(' type ( ',' type )* ')' )? )
			// src/analyseurs/projet.g:78:2: ident ( 'fixe' '(' type ( ',' type )* ')' )? ( 'mod' '(' type ( ',' type )* ')' )?
			{
			pushFollow(FOLLOW_ident_in_specif178);
			ident();
			state._fsp--;

			// src/analyseurs/projet.g:78:8: ( 'fixe' '(' type ( ',' type )* ')' )?
			int alt10=2;
			int LA10_0 = input.LA(1);
			if ( (LA10_0==40) ) {
				alt10=1;
			}
			switch (alt10) {
				case 1 :
					// src/analyseurs/projet.g:78:9: 'fixe' '(' type ( ',' type )* ')'
					{
					match(input,40,FOLLOW_40_in_specif181); 
					match(input,9,FOLLOW_9_in_specif183); 
					pushFollow(FOLLOW_type_in_specif185);
					type();
					state._fsp--;

					// src/analyseurs/projet.g:78:25: ( ',' type )*
					loop9:
					while (true) {
						int alt9=2;
						int LA9_0 = input.LA(1);
						if ( (LA9_0==13) ) {
							alt9=1;
						}

						switch (alt9) {
						case 1 :
							// src/analyseurs/projet.g:78:27: ',' type
							{
							match(input,13,FOLLOW_13_in_specif189); 
							pushFollow(FOLLOW_type_in_specif191);
							type();
							state._fsp--;

							}
							break;

						default :
							break loop9;
						}
					}

					match(input,10,FOLLOW_10_in_specif195); 
					}
					break;

			}

			// src/analyseurs/projet.g:78:44: ( 'mod' '(' type ( ',' type )* ')' )?
			int alt12=2;
			int LA12_0 = input.LA(1);
			if ( (LA12_0==43) ) {
				alt12=1;
			}
			switch (alt12) {
				case 1 :
					// src/analyseurs/projet.g:79:3: 'mod' '(' type ( ',' type )* ')'
					{
					match(input,43,FOLLOW_43_in_specif203); 
					match(input,9,FOLLOW_9_in_specif205); 
					pushFollow(FOLLOW_type_in_specif207);
					type();
					state._fsp--;

					// src/analyseurs/projet.g:79:18: ( ',' type )*
					loop11:
					while (true) {
						int alt11=2;
						int LA11_0 = input.LA(1);
						if ( (LA11_0==13) ) {
							alt11=1;
						}

						switch (alt11) {
						case 1 :
							// src/analyseurs/projet.g:79:20: ',' type
							{
							match(input,13,FOLLOW_13_in_specif211); 
							pushFollow(FOLLOW_type_in_specif213);
							type();
							state._fsp--;

							}
							break;

						default :
							break loop11;
						}
					}

					match(input,10,FOLLOW_10_in_specif217); 
					}
					break;

			}

			}

		}

		// la directive rulecatch permet d'interrompre l'analyse à la première erreur de syntaxe
			catch (RecognitionException e) {
				reportError (e) ;
				throw e ; 
			}

		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "specif"



	// $ANTLR start "consts"
	// src/analyseurs/projet.g:82:1: consts : 'const' ( ident '=' valeur ptvg )+ ;
	public final void consts() throws RecognitionException {
		try {
			// src/analyseurs/projet.g:82:7: ( 'const' ( ident '=' valeur ptvg )+ )
			// src/analyseurs/projet.g:83:5: 'const' ( ident '=' valeur ptvg )+
			{
			match(input,28,FOLLOW_28_in_consts233); 
			// src/analyseurs/projet.g:83:13: ( ident '=' valeur ptvg )+
			int cnt13=0;
			loop13:
			while (true) {
				int alt13=2;
				int LA13_0 = input.LA(1);
				if ( (LA13_0==ID) ) {
					alt13=1;
				}

				switch (alt13) {
				case 1 :
					// src/analyseurs/projet.g:83:14: ident '=' valeur ptvg
					{
					pushFollow(FOLLOW_ident_in_consts236);
					ident();
					state._fsp--;

					match(input,21,FOLLOW_21_in_consts238); 
					pushFollow(FOLLOW_valeur_in_consts240);
					valeur();
					state._fsp--;

					PtGen.pt(5);
					pushFollow(FOLLOW_ptvg_in_consts244);
					ptvg();
					state._fsp--;

					}
					break;

				default :
					if ( cnt13 >= 1 ) break loop13;
					EarlyExitException eee = new EarlyExitException(13, input);
					throw eee;
				}
				cnt13++;
			}

			}

		}

		// la directive rulecatch permet d'interrompre l'analyse à la première erreur de syntaxe
			catch (RecognitionException e) {
				reportError (e) ;
				throw e ; 
			}

		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "consts"



	// $ANTLR start "vars"
	// src/analyseurs/projet.g:85:1: vars : 'var' ( type ident ( ',' ident )* ptvg )+ ;
	public final void vars() throws RecognitionException {
		try {
			// src/analyseurs/projet.g:85:5: ( 'var' ( type ident ( ',' ident )* ptvg )+ )
			// src/analyseurs/projet.g:86:2: 'var' ( type ident ( ',' ident )* ptvg )+
			{
			match(input,53,FOLLOW_53_in_vars255); 
			// src/analyseurs/projet.g:86:8: ( type ident ( ',' ident )* ptvg )+
			int cnt15=0;
			loop15:
			while (true) {
				int alt15=2;
				int LA15_0 = input.LA(1);
				if ( (LA15_0==26||LA15_0==33) ) {
					alt15=1;
				}

				switch (alt15) {
				case 1 :
					// src/analyseurs/projet.g:86:9: type ident ( ',' ident )* ptvg
					{
					pushFollow(FOLLOW_type_in_vars258);
					type();
					state._fsp--;

					pushFollow(FOLLOW_ident_in_vars260);
					ident();
					state._fsp--;

					PtGen.pt(8);
					// src/analyseurs/projet.g:86:34: ( ',' ident )*
					loop14:
					while (true) {
						int alt14=2;
						int LA14_0 = input.LA(1);
						if ( (LA14_0==13) ) {
							alt14=1;
						}

						switch (alt14) {
						case 1 :
							// src/analyseurs/projet.g:86:36: ',' ident
							{
							match(input,13,FOLLOW_13_in_vars265); 
							pushFollow(FOLLOW_ident_in_vars267);
							ident();
							state._fsp--;

							PtGen.pt(8);
							}
							break;

						default :
							break loop14;
						}
					}

					pushFollow(FOLLOW_ptvg_in_vars273);
					ptvg();
					state._fsp--;

					}
					break;

				default :
					if ( cnt15 >= 1 ) break loop15;
					EarlyExitException eee = new EarlyExitException(15, input);
					throw eee;
				}
				cnt15++;
			}

			}

		}

		// la directive rulecatch permet d'interrompre l'analyse à la première erreur de syntaxe
			catch (RecognitionException e) {
				reportError (e) ;
				throw e ; 
			}

		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "vars"



	// $ANTLR start "type"
	// src/analyseurs/projet.g:88:1: type : ( 'ent' | 'bool' );
	public final void type() throws RecognitionException {
		try {
			// src/analyseurs/projet.g:88:5: ( 'ent' | 'bool' )
			int alt16=2;
			int LA16_0 = input.LA(1);
			if ( (LA16_0==33) ) {
				alt16=1;
			}
			else if ( (LA16_0==26) ) {
				alt16=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 16, 0, input);
				throw nvae;
			}

			switch (alt16) {
				case 1 :
					// src/analyseurs/projet.g:89:2: 'ent'
					{
					match(input,33,FOLLOW_33_in_type284); 
					PtGen.pt(6);
					}
					break;
				case 2 :
					// src/analyseurs/projet.g:90:4: 'bool'
					{
					match(input,26,FOLLOW_26_in_type290); 
					PtGen.pt(7);
					}
					break;

			}
		}

		// la directive rulecatch permet d'interrompre l'analyse à la première erreur de syntaxe
			catch (RecognitionException e) {
				reportError (e) ;
				throw e ; 
			}

		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "type"



	// $ANTLR start "decprocs"
	// src/analyseurs/projet.g:92:1: decprocs : ( decproc ptvg )+ ;
	public final void decprocs() throws RecognitionException {
		try {
			// src/analyseurs/projet.g:92:9: ( ( decproc ptvg )+ )
			// src/analyseurs/projet.g:92:11: ( decproc ptvg )+
			{
			// src/analyseurs/projet.g:92:11: ( decproc ptvg )+
			int cnt17=0;
			loop17:
			while (true) {
				int alt17=2;
				int LA17_0 = input.LA(1);
				if ( (LA17_0==47) ) {
					alt17=1;
				}

				switch (alt17) {
				case 1 :
					// src/analyseurs/projet.g:92:12: decproc ptvg
					{
					pushFollow(FOLLOW_decproc_in_decprocs299);
					decproc();
					state._fsp--;

					pushFollow(FOLLOW_ptvg_in_decprocs301);
					ptvg();
					state._fsp--;

					}
					break;

				default :
					if ( cnt17 >= 1 ) break loop17;
					EarlyExitException eee = new EarlyExitException(17, input);
					throw eee;
				}
				cnt17++;
			}

			}

		}

		// la directive rulecatch permet d'interrompre l'analyse à la première erreur de syntaxe
			catch (RecognitionException e) {
				reportError (e) ;
				throw e ; 
			}

		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "decprocs"



	// $ANTLR start "decproc"
	// src/analyseurs/projet.g:94:1: decproc : 'proc' ident ( parfixe )? ( parmod )? ( consts )? ( vars )? corps ;
	public final void decproc() throws RecognitionException {
		try {
			// src/analyseurs/projet.g:94:8: ( 'proc' ident ( parfixe )? ( parmod )? ( consts )? ( vars )? corps )
			// src/analyseurs/projet.g:95:2: 'proc' ident ( parfixe )? ( parmod )? ( consts )? ( vars )? corps
			{
			match(input,47,FOLLOW_47_in_decproc311); 
			pushFollow(FOLLOW_ident_in_decproc313);
			ident();
			state._fsp--;

			// src/analyseurs/projet.g:95:15: ( parfixe )?
			int alt18=2;
			int LA18_0 = input.LA(1);
			if ( (LA18_0==40) ) {
				alt18=1;
			}
			switch (alt18) {
				case 1 :
					// src/analyseurs/projet.g:95:15: parfixe
					{
					pushFollow(FOLLOW_parfixe_in_decproc315);
					parfixe();
					state._fsp--;

					}
					break;

			}

			// src/analyseurs/projet.g:95:24: ( parmod )?
			int alt19=2;
			int LA19_0 = input.LA(1);
			if ( (LA19_0==43) ) {
				alt19=1;
			}
			switch (alt19) {
				case 1 :
					// src/analyseurs/projet.g:95:24: parmod
					{
					pushFollow(FOLLOW_parmod_in_decproc318);
					parmod();
					state._fsp--;

					}
					break;

			}

			// src/analyseurs/projet.g:95:32: ( consts )?
			int alt20=2;
			int LA20_0 = input.LA(1);
			if ( (LA20_0==28) ) {
				alt20=1;
			}
			switch (alt20) {
				case 1 :
					// src/analyseurs/projet.g:95:32: consts
					{
					pushFollow(FOLLOW_consts_in_decproc321);
					consts();
					state._fsp--;

					}
					break;

			}

			// src/analyseurs/projet.g:95:40: ( vars )?
			int alt21=2;
			int LA21_0 = input.LA(1);
			if ( (LA21_0==53) ) {
				alt21=1;
			}
			switch (alt21) {
				case 1 :
					// src/analyseurs/projet.g:95:40: vars
					{
					pushFollow(FOLLOW_vars_in_decproc324);
					vars();
					state._fsp--;

					}
					break;

			}

			pushFollow(FOLLOW_corps_in_decproc327);
			corps();
			state._fsp--;

			}

		}

		// la directive rulecatch permet d'interrompre l'analyse à la première erreur de syntaxe
			catch (RecognitionException e) {
				reportError (e) ;
				throw e ; 
			}

		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "decproc"



	// $ANTLR start "ptvg"
	// src/analyseurs/projet.g:97:1: ptvg : ( ';' |);
	public final void ptvg() throws RecognitionException {
		try {
			// src/analyseurs/projet.g:97:5: ( ';' |)
			int alt22=2;
			int LA22_0 = input.LA(1);
			if ( (LA22_0==17) ) {
				alt22=1;
			}
			else if ( (LA22_0==EOF||LA22_0==ID||LA22_0==26||(LA22_0 >= 28 && LA22_0 <= 29)||LA22_0==33||LA22_0==47||LA22_0==49||LA22_0==53) ) {
				alt22=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 22, 0, input);
				throw nvae;
			}

			switch (alt22) {
				case 1 :
					// src/analyseurs/projet.g:98:2: ';'
					{
					match(input,17,FOLLOW_17_in_ptvg335); 
					}
					break;
				case 2 :
					// src/analyseurs/projet.g:99:3: 
					{
					}
					break;

			}
		}

		// la directive rulecatch permet d'interrompre l'analyse à la première erreur de syntaxe
			catch (RecognitionException e) {
				reportError (e) ;
				throw e ; 
			}

		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "ptvg"



	// $ANTLR start "corps"
	// src/analyseurs/projet.g:101:1: corps : 'debut' instructions 'fin' ;
	public final void corps() throws RecognitionException {
		try {
			// src/analyseurs/projet.g:101:6: ( 'debut' instructions 'fin' )
			// src/analyseurs/projet.g:102:2: 'debut' instructions 'fin'
			{
			match(input,29,FOLLOW_29_in_corps346); 
			pushFollow(FOLLOW_instructions_in_corps348);
			instructions();
			state._fsp--;

			match(input,39,FOLLOW_39_in_corps350); 
			}

		}

		// la directive rulecatch permet d'interrompre l'analyse à la première erreur de syntaxe
			catch (RecognitionException e) {
				reportError (e) ;
				throw e ; 
			}

		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "corps"



	// $ANTLR start "parfixe"
	// src/analyseurs/projet.g:104:1: parfixe : 'fixe' '(' pf ( ';' pf )* ')' ;
	public final void parfixe() throws RecognitionException {
		try {
			// src/analyseurs/projet.g:104:8: ( 'fixe' '(' pf ( ';' pf )* ')' )
			// src/analyseurs/projet.g:105:2: 'fixe' '(' pf ( ';' pf )* ')'
			{
			match(input,40,FOLLOW_40_in_parfixe358); 
			match(input,9,FOLLOW_9_in_parfixe360); 
			pushFollow(FOLLOW_pf_in_parfixe362);
			pf();
			state._fsp--;

			// src/analyseurs/projet.g:105:16: ( ';' pf )*
			loop23:
			while (true) {
				int alt23=2;
				int LA23_0 = input.LA(1);
				if ( (LA23_0==17) ) {
					alt23=1;
				}

				switch (alt23) {
				case 1 :
					// src/analyseurs/projet.g:105:17: ';' pf
					{
					match(input,17,FOLLOW_17_in_parfixe365); 
					pushFollow(FOLLOW_pf_in_parfixe367);
					pf();
					state._fsp--;

					}
					break;

				default :
					break loop23;
				}
			}

			match(input,10,FOLLOW_10_in_parfixe371); 
			}

		}

		// la directive rulecatch permet d'interrompre l'analyse à la première erreur de syntaxe
			catch (RecognitionException e) {
				reportError (e) ;
				throw e ; 
			}
